--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>Git example</h1>
     <p>Just a git test</p>
+    <div>
+        <p>
+            Another text!
+        </p>
+    </div>
 </body>
 </html>
